clusters/9ka/downloaders/jellyfin/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jellyfin
  labels:
    app.kubernetes.io/name: jellyfin
    app.kubernetes.io/component: stream
    app.kubernetes.io/part-of: downloaders
spec:
  serviceName: jellyfin
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: jellyfin
      app.kubernetes.io/component: stream
      app.kubernetes.io/part-of: downloaders
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jellyfin
        app.kubernetes.io/component: stream
        app.kubernetes.io/part-of: downloaders
    spec:
      securityContext:
        # runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: jellyfin
        image: ghcr.io/jellyfin/jellyfin
        ports:
        - name: http
          containerPort: 8096
          protocol: TCP
        startupProbe:
          httpGet:
            port: http
            path: /
          periodSeconds: 1
          failureThreshold: 30
        livenessProbe:
          httpGet:
            port: http
            path: /
          periodSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            port: http
            path: /
          periodSeconds: 5
          failureThreshold: 3
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /cache
          name: cache
        - mountPath: /tv
          name: tv
          readOnly: true
        - mountPath: /movies
          name: movies
          readOnly: true
        # - mountPath: /run
        #   name: run
        resources:
          limits:
            cpu: "2"
            memory: 1Gi
          requests:
            cpu: 100m
            memory: 380Mi
        securityContext:
          allowPrivilegeEscalation: false
          privileged: false
          capabilities:
            drop:
            - ALL
            add:
            - NET_BIND_SERVICE
          # readOnlyRootFilesystem: true
          # runAsUser: 1000
          # runAsGroup: 1000
          # runAsNonRoot: true
      volumes:
      - name: movies
        nfs:
          server: helium.svc.efgh.nl
          path: /rusty/data/movies
      - name: tv
        nfs:
          server: helium.svc.efgh.nl
          path: /rusty/data/series
      # - name: run
      #   emptyDir:
      #     sizeLimit: 1Gi
  volumeClaimTemplates:
  - metadata:
      name: config
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
      storageClassName: proxmox-zfs-nvme
      volumeMode: Filesystem
  - metadata:
      name: cache
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 10Gi
      storageClassName: proxmox-zfs-nvme
      volumeMode: Filesystem
