clusters/9ka/downloaders/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  labels:
    app.kubernetes.io/name: jellyfin
    app.kubernetes.io/component: stream
    app.kubernetes.io/part-of: downloaders
spec:
  selector:
    app.kubernetes.io/name: jellyfin
    app.kubernetes.io/component: stream
    app.kubernetes.io/part-of: downloaders
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
