clusters/9ka/downloaders/jellyfin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/hostname: jellyfin.9ka.nl
    external-dns.alpha.kubernetes.io/target: 431113a6-4cf3-4a66-9750-17113ae2e689.cfargotunnel.com
  labels:
    app.kubernetes.io/name: jellyfin
    app.kubernetes.io/component: stream
    app.kubernetes.io/part-of: downloaders
  name: jellyfin
spec:
  ingressClassName: cilium
  rules:
  - host: jellyfin.9ka.nl
    http:
      paths:
      - backend:
          service:
            name: jellyfin
            port:
              name: http
        path: /
        pathType: Prefix
